knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__RM_Svg__c/pqcrush__RM_Svg__c.object-meta.xml
<CustomObject>
    <label>Relationship Map Badge</label>
    <nameField>
        <label>Relationship Map Badge Names</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Relationship Map Badges</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>