knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__RM_Svg__c/fields/pqcrush__Fill__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__Fill__c</fullName>
    <description>The fill attribute defines the color of the interior of the drawing defined by the Geometry String path, in #rrggbb notation.</description>
    <inlineHelpText>The fill attribute defines the color of the interior of the drawing defined by the Geometry String path, in #rrggbb notation.</inlineHelpText>
    <label>Fill</label>
    <length>255</length>
    <type>Text</type>
</CustomField>