knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__RM_Svg__c/fields/pqcrush__Geometry_String__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__Geometry_String__c</fullName>
    <description>This is an SVG &apos;path&apos; element, containing commands to draw the badge shape.</description>
    <inlineHelpText>This is an SVG &apos;path&apos; element, containing commands to draw the badge shape.</inlineHelpText>
    <label>Geometry String</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>