knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__RM_Svg__c/fields/pqcrush__Used_in_all_account_plans__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__Used_in_all_account_plans__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box to make this badge available to all Prolifiq CRUSH Key Stakeholder Maps.</description>
    <inlineHelpText>Check this box to make this badge available to all Prolifiq CRUSH Key Stakeholder Maps.</inlineHelpText>
    <label>Used in all Account Plans</label>
    <type>Checkbox</type>
</CustomField>