knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__RM_Svg__c/fields/pqcrush__Used_in_all_relationship_maps__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__Used_in_all_relationship_maps__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box to make this badge available to all Prolifiq Relationship Maps.</description>
    <inlineHelpText>Check this box to make this badge available to all Prolifiq Relationship Maps.</inlineHelpText>
    <label>Used in all Relationship Maps</label>
    <type>Checkbox</type>
</CustomField>