knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__RM_Svg__c/listViews/pqcrush__All.listView-meta.xml
<ListView>
    <fullName>pqcrush__All</fullName>
    <columns>pqcrush__Label__c</columns>
    <columns>pqcrush__Fill__c</columns>
    <columns>NAME</columns>
    <columns>pqcrush__Used_in_all_account_plans__c</columns>
    <columns>pqcrush__Used_in_all_relationship_maps__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>